--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -71,10 +71,9 @@
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                         <ul>
-                            <li @click="baglac()"><a > Raf </a></li>
-                            <li @click="yorac()"><a >Yorumlar </a></li>
-                            <li><a>Beğeniler </a></li>
-                            <!-- <li><a href="#0">İstatistik </a></li> -->
+                            <li @click="baglac()"><a>Raf</a></li>
+                            <li @click="yorac()"><a>Yorumlar </a></li>
+                            <li @click="begac()"><a>Beğeniler </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -82,7 +81,7 @@
             </div>
 
             <div class="lg:flex lg:mt-8 mt-4 lg:space-x-8">
-                <div class="lg:w-12/12 space-y-6" v-if="baglanti == true" >
+                <div class="lg:w-12/12 space-y-6" v-if="baglanti == true">
                     <ul class="space-y-6">
                         <% sozluk.forEach(element => { %>
                             <li style="margin-top: 4px;">
@@ -136,7 +135,7 @@
                             <% }) %>
                     </ul>
                 </div>
-                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true" style="margin-left:11px;">
+                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true" style="margin-left: 11px;">
                     <% yorum.forEach(element=> { %>
                         <div class="flex">
                             <div>
@@ -205,6 +204,102 @@
                         </div>
                         <% }) %>
                 </div>
+                <div class="lg:w-12/12 space-y-6" v-if="begenn == true" style="margin-left: 11px;">
+                    <% begen.forEach(element=> { %>
+                        <div class="flex">
+                            <div>
+                                <h3 class="text-lg font-semibold">
+                                    <%= element.yorum.konu.title %> 
+                                </h3>
+                                <p style="font-size: 15pt;">
+                                    <%= element.yorum.yorum %>
+                                </p>
+                                <div class="row" style="margin-left: 1vw;">
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-whatsapp" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                        name="heart-outline"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon style="padding-left: 9vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
+
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <b>
+                                                    <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;" name="checkmark-outline"></ion-icon>
+
+                                                    </b>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon class="text-2xl" style="padding-left: 9vw;" name="ellipsis-vertical"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <hr style="margin-top: 4px;">
+
+                            </div>
+                        </div>
+                        <% }) %>
+                </div>
+                <!-- <div class="lg:w-5/12 space-y-6">
+                  
+                    <div class="widget">
+                        <h4 class="text-2xl mb-3 font-semibold"> Hakkında </h4>
+                        <ul class="text-gray-600 space-y-4">
+                            <li class="flex items-center space-x-2"> 
+                                <ion-icon name="home-sharp" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
+                                <strong> İstanbul'da bir yer . .   </strong>
+                            </li>
+                            <li class="flex items-center space-x-2"> 
+                                <ion-icon name="globe" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
+                                <strong> www.ornek.com  </strong>
+                            </li>
+                            <li class="flex items-center space-x-2"> 
+                                <ion-icon name="logo-instagram" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
+                                <strong> @ornekkisi  </strong>
+                            </li>
+                            <li class="flex items-center space-x-2">
+                                <ion-icon name="logo-facebook" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
+                                <strong> <a href="https://google.com">Abdullah Bektaş</a> </strong>
+                            </li>   
+                            <li class="flex items-center space-x-2">
+                            <ion-icon name="logo-twitter" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
+                                <strong> <a href="https://google.com">Abdullah Bektaş</a> </strong>
+                            </li>   
+                        </ul></div>
+                    </div> -->
             </div>
 
         </div>
