--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -40,7 +40,7 @@
                             <ul>
                                 <li @click="baglac()"><a> Raf</a></li>
                                 <li @click="yorac()"><a>Yorumlar </a></li>
-                                <li><a>Beğeniler </a></li>
+                                <li @click="begac()"><a>Beğeniler </a></li>
                             </ul>
                         </nav>
                     </div>
@@ -108,6 +108,75 @@
                                         </h3>
                                         <p style="font-size: 15pt;">
                                             <%= element.yorum %>
+                                        </p>
+                                        <div class="row" style="margin-left: 1vw;">
+                                            <table>
+                                                <tr>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-whatsapp" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                                name="heart-outline"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
+
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <b>
+                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;" name="checkmark-outline"></ion-icon>
+
+                                                            </b>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon class="text-2xl" style="padding-left: 9vw;" name="ellipsis-vertical"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                        <hr style="margin-top: 4px;">
+
+                                    </div>
+                                </div>
+                                <% }) %>
+                        </div>
+                        <div class="lg:w-12/12 space-y-6" v-if="begenn == true" style="margin-left: 11px;">
+                            <% begen.forEach(element=> { %>
+                                <div class="flex">
+                                    <div>
+                                        <h3 class="text-lg font-semibold">
+                                            <%= element.yorum.konu.title %> 
+                                        </h3>
+                                        <p style="font-size: 15pt;">
+                                            <%= element.yorum.yorum %>
                                         </p>
                                         <div class="row" style="margin-left: 1vw;">
                                             <table>
