--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -79,8 +79,8 @@
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                        <div class="flex items-center" @click="begen('<%= element._id %>')">
+                                                            <ion-icon id="<%= element._id %>" style="padding-left: 9vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
