--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -16,51 +16,22 @@
                 <% }) %>
             </div>
             <hr>
-            <div style="display: flex;">
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
-                            style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        asdasd
-                    </span>
-                </a>
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
-                            style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        asdasd
-                    </span>
-                </a>
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
-                            style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        asdasd
-                    </span>
-                </a>
-            </div>
-            <div style="display: flex;">
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
-                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        Deneme
-                    </span>
-                </a>
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
-                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        Deneme
-                    </span>
-                </a>
-                <a href="/magazaic">
-                    <span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
-                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                        Deneme
-                    </span>
-                </a>
+            <div class="grid md:grid-cols-4 grid-cols-3 gap-3 mt-5">
+                <% for( let index = 0; index < 12; index++ ) { %>
+                    <div>
+                        <div class="bg-green-400 max-w-full lg:h-56 h-48 rounded-lg relative overflow-hidden shadow uk-transition-toggle">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" class="w-full h-full absolute object-cover inset-0">
+                            <!-- overly-->
+                            <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
+                            <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
+                                <div class="flex-1"> 
+                                    <div class="text-lg"> Nikola Tesla </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                <% } %>
+                
             </div>
             <!-- 
             <table>
