--- a/views/front/part/header2.ejs
+++ b/views/front/part/header2.ejs
@@ -66,7 +66,7 @@ c59.551,0,108,48.448,108,108S315.551,256,256,256z" />
                                     </svg>
                                 </a>
                                 <% } %>
-                                    <a href="/magaza" id="gizle" class="is_icon">
+                                    <a href="/medya" id="gizle" class="is_icon">
                                         <ion-icon name="camera-outline" style="color: gray;" class="text-4xl">
                                         </ion-icon>
                                     </a>
