--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -25,7 +25,7 @@
                             <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
                             <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
                                 <div class="flex-1"> 
-                                    <div class="text-lg"> Nikola Tesla </div>
+                                    <div class="text-lg"> <a href="/medyaic">Nikola Tesla</a> </div>
                                 </div> 
                             </div>
                         </div>
