--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -16,7 +16,7 @@
                 <% }) %>
             </div>
             <hr>
-            <div class="grid md:grid-cols-4 grid-cols-3 gap-3 mt-5">
+            <div class="grid md:grid-cols-4 grid-cols-2 gap-3 mt-5">
                 <% for( let index = 0; index < 12; index++ ) { %>
                     <div>
                         <div class="bg-green-400 max-w-full lg:h-56 h-48 rounded-lg relative overflow-hidden shadow uk-transition-toggle">
@@ -25,7 +25,7 @@
                             <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
                             <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
                                 <div class="flex-1"> 
-                                    <div class="text-lg"> <a href="/medyaic">Nikola Tesla</a> </div>
+                                    <div class="text-sm"> <a href="/medyaic"> Nikola Tesla </a> </div>
                                 </div> 
                             </div>
                         </div>
