--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -20,12 +20,12 @@
                 <% for( let index = 0; index < 12; index++ ) { %>
                     <div>
                         <div class="bg-green-400 max-w-full lg:h-56 h-48 rounded-lg relative overflow-hidden shadow uk-transition-toggle">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" class="w-full h-full absolute object-cover inset-0">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="height: 300px;" class="w-full h-full absolute object-cover inset-0">
                             <!-- overly-->
                             <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
                             <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
                                 <div class="flex-1"> 
-                                    <div class="text-sm"> <a href="/medyaic"> Nikola Tesla </a> </div>
+                                    <div class="text-sm"> <a href="/medyaic"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed cum hic ullam </a> </div>
                                 </div> 
                             </div>
                         </div>
