--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -25,7 +25,7 @@
                             <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
                             <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
                                 <div class="flex-1"> 
-                                    <div class="text-sm"> <a href="/medyaic"> <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed cum hic ullam</b> </a> </div>
+                                    <div class="text-sm"> <a href="/medyaic" style="text-shadow: 2px 2px 8px black;"> <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed cum hic ullam</b> </a> </div>
                                 </div> 
                             </div>
                         </div>
