--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -16,21 +16,27 @@
                 <% }) %>
             </div>
             <hr>
-            <div class="grid md:grid-cols-4 grid-cols-3 gap-3 mt-5">
+            <div style="margin-top: 20px;">
                 <% for( let index = 0; index < 12; index++ ) { %>
-                    <div>
-                        <div class="bg-green-400 max-w-full lg:h-56 h-48 rounded-lg relative overflow-hidden shadow uk-transition-toggle">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" class="w-full h-full absolute object-cover inset-0">
+                    <div style="display: flex; flex-direction: row;">
+                        <div style="flex: 10;">
+                            <h3 class="text-lg font-semibold">
+                                Lorem ipsum, dolor sit amet.
+                            </h3>
+                            <small>yazan : Abdullah Bektaş | 5s önce</small>
+                        </div>
+                        <div style="flex: 2; max-height: 100px; margin-bottom: 15px;" class="rounded-lg relative overflow-hidden shadow uk-transition-toggle">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="object-fit: cover;">
                             <!-- overly-->
                             <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
                             <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
                                 <div class="flex-1"> 
-                                    <div class="text-sm"> <a href="/medyaic" style="text-shadow: 2px 2px 8px black;"> <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed cum hic ullam</b> </a> </div>
+                                    <div class="text-sm"> <a href="/medyaic" style="text-shadow: 2px 2px 8px black;"></a> </div>
                                 </div> 
                             </div>
                         </div>
                     </div>
-                <% } %>
+                 <% } %>
                 
             </div>
             <!-- 
