--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -20,20 +20,13 @@
                 <% for( let index = 0; index < 12; index++ ) { %>
                     <div style="display: flex; flex-direction: row;">
                         <div style="flex: 10;">
-                            <h3 class="text-lg font-semibold">
-                                Lorem ipsum, dolor sit amet.
+                            <h3 class="text-xl font-semibold" style="text-transform: capitalize;">
+                                Lorem ipsum, dolor sit amet. Lorem <br> ipsum, dolor sit amet.
                             </h3>
                             <small>yazan : Abdullah Bektaş | 5s önce</small>
                         </div>
-                        <div style="flex: 2; max-height: 100px; margin-bottom: 15px;" class="rounded-lg relative overflow-hidden shadow uk-transition-toggle">
+                        <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 15px;" class="relative overflow-hidden shadow uk-transition-toggle">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="object-fit: cover;">
-                            <!-- overly-->
-                            <div class="-bottom-12 absolute bg-gradient-to-b from-transparent h-1/2 to-gray-800 uk-transition-slide-bottom-small w-full"></div>
-                            <div class="absolute bottom-0 w-full p-3 text-white uk-transition-slide-bottom-small flex items-center">
-                                <div class="flex-1"> 
-                                    <div class="text-sm"> <a href="/medyaic" style="text-shadow: 2px 2px 8px black;"></a> </div>
-                                </div> 
-                            </div>
                         </div>
                     </div>
                  <% } %>
