--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -21,11 +21,11 @@
                     <div style="display: flex; flex-direction: row;">
                         <div style="flex: 10;">
                             <h3 class="text-xl font-semibold" style="text-transform: capitalize;">
-                                Lorem ipsum, dolor sit amet. Lorem <br> ipsum, dolor sit amet.
+                                Lorem ipsum, dolor sit amet. Lorem ipsum, dolor sit amet.
                             </h3>
                             <small>yazan : Abdullah Bektaş | 5s önce</small>
                         </div>
-                        <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 15px;" class="relative overflow-hidden shadow uk-transition-toggle">
+                        <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;" class="relative overflow-hidden shadow uk-transition-toggle">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="object-fit: cover;">
                         </div>
                     </div>
