--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -20,7 +20,7 @@
                 <% for( let index = 0; index < 12; index++ ) { %>
                     <div style="display: flex; flex-direction: row;">
                         <div style="flex: 10;">
-                            <h3 class="text-xl font-semibold" style="text-transform: capitalize;">
+                            <h3 class="text-xl font-semibold" style="text-transform: capitalize; line-height: 20px;">
                                 Lorem ipsum, dolor sit amet. Lorem ipsum, dolor sit amet.
                             </h3>
                             <small>yazan : Abdullah Bektaş | 5s önce</small>
