--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -17,90 +17,86 @@
             </div>
             <hr>
             <div style="margin-top: 20px;">
-                <% for( let index = 0; index < 12; index++ ) { %>
+                <% medya.forEach(element => { %>
                     <div style="display: flex; flex-direction: row;">
                         <div style="flex: 10;">
                             <h3 class="text-xl font-semibold" style="text-transform: capitalize; line-height: 20px;">
-                                Lorem ipsum, dolor sit amet. Lorem ipsum, dolor sit amet.
+                                <%= element.title %> 
                             </h3>
                             <small>yazan : Abdullah Bektaş | 5s önce</small>
                         </div>
-                        <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;" class="relative overflow-hidden shadow uk-transition-toggle">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="object-fit: cover;">
+                        <!-- <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;" class="relative overflow-hidden shadow uk-transition-toggle"> -->
+                        <div style="flex: 4; max-height: 100px; max-width: 100px; margin-bottom: 35px;" class="relative overflow-hidden shadow uk-transition-toggle">
+                            <img src="<%= element.kapak %>" style="object-fit: contain;">
                         </div>
                     </div>
-                 <% } %>
-                
+                <% }) %>
             </div>
-            <!-- 
-            <table>
-                <% for( let index = 0; index < 1; index++ ) { %>
-                    <tr style="margin-top: 10vh;">
-                        <td>
-                            <div class="card-media h-44">
-                                <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
-                                <span>Deneme</span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="card-media h-44">
-                                <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
-                                <span>Deneme</span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="card-media h-44">
-                                <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
-                                <span>Deneme</span>
-                            </div>
-                        </td>
-                    </tr>
-                <% } %>
-            </table> -->
-        </div>
-        <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+        <a onaclick="medyaKaydet()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
             Paylaş </a>
         <div id="create-post-modal" class="create-post" uk-modal>
             <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
 
                 <div class="text-center py-4 border-b" v-if="yyy == null">
-                    <h3 class="text-lg font-semibold"> Kütüphaneye ekleme yapıyorsunuz. </h3>
+                    <h3 class="text-lg font-semibold"> Medya ekleme yapıyorsunuz. </h3>
                     <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button>
                 </div>
-                <div class="text-center py-4 border-b" style="background-color: #03A9F4" v-if="yyy == true">
-                    <h3 class="text-lg font-semibold" style="color: white;"> Yorumunuz başarıyla eklendi. </h3>
-                    <!-- <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button> -->
-                </div>
+                <!-- <div class="text-center py-4 border-b" id="aktif" style="background-color: #03A9F4" style="display: none;">
+                    <h3 class="text-lg font-semibold" style="color: white;"> Medya başarıyla eklendi. </h3>
+                    <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button>
+                </div> -->
                 <div class="flex flex-1 items-start space-x-4 p-5">
                     <!-- <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11"> -->
                     <div class="flex-1 pt-1" style="border-radius: 20px;">
-                        <input type="file" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
+                        <input type="file" onchange="readURL(this);" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
                         <hr>
-                        <input v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
+                        <input id="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
                         <hr>
-                        <textarea class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Açıklama"></textarea>
+                        <textarea id="aciklama" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Açıklama"></textarea>
                     </div>
                 </div>
                 
-                <!-- <div class="bsolute bottom-0 p-4 space-x-4 w-full">
-                    <ion-icon name="link-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
-                    <ion-icon name="book-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
-                </div> -->
-                <!-- <div class="flex items-center w-full justify-between p-3 border-t">
+                <div class="bsolute bottom-0 p-4 space-x-4 w-full">
+                    <!-- <ion-icon name="link-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
+                    <ion-icon name="book-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon> -->
+                </div>
+                 <div class="flex items-center w-full justify-between p-3 border-t" style="padding-left: 70vw;">
                     <div class="flex space-x-2">
-
-                        <!-- <a @click="konuEkle()" style="color: white;" class="bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium">
-                          Paylaş </a> -->
-                          <!-- <img @click="konuEkle()" style="height: 30px;" src="../../paylas.png" class=""> -->
-                    <!-- </div> -->
-
-                    <!-- <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
-                        Paylaş </a> -->
-                        <!-- <img @click="konuEkle()" hidden style="height: 30px;" src="../../paylas.png" class=""> -->
-                <!-- </div>  -->
+                        <a onclick="medyaKaydet()" style="color: white;" class="bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium">
+                          Paylaş </a> 
+                           <img onclick="medyaKaydet()" style="height: 30px;" src="../../paylas.png" class="">
+                     </div>
+                     <a @click="medyaKaydet()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+                        Paylaş </a>
+                        <img @click="medyaKaydet()" hidden style="height: 30px;" src="../../paylas.png" class="">
+                </div> 
             </div>
         </div>
     </div>
+
+    <script>
+        window.a = ""
+        function readURL(input) {
+            console.log(input.files[0])
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    window.a = e.target.result
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        function medyaKaydet() {
+            axios.post("/medyaekle",{
+                kapak:window.a,
+                title: document.getElementById("title").value,
+                aciklama: document.getElementById("aciklama").value,
+            }).then(response=>{
+                if (response.data.status == true) {
+                    alert("Başarıyla eklendi.")
+                } else {
+                    alert("Hata var")
+                }
+            })
+        }
+    </script>
