--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -6,7 +6,7 @@
             <div class="card" style="border-radius: 20px;">
                 <div style="height: 380px;" class="card-media h-44">
                     <div class="card-media-overly"></div>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="border-radius: 20px; object-fit: cover;">
+                    <img src="<%= medya.kapak %>" style="border-radius: 20px; object-fit: cover;">
                     <span class="absolute bg-white px-2 py-1 text-sm rounded-md m-2"> Label</span>
                 </div>
                 <br>
@@ -15,7 +15,7 @@
                         <td>
                             <div class="profile_avatar">
                             <div class="profile_avatar_holder">
-                                <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 50px; width: 50px;"> 
+                                <img src="<%= medya.user.photo %>" style="border-radius: 75px; height: 50px; width: 50px;"> 
                             </div>
                             
                             <div class="user_status status_online"></div>
@@ -31,8 +31,8 @@
                     </tr>
                 </table>
                 <div class="card-body">
-                    <div class="text-xs font-semibold uppercase text-yellow-500">DENEME</div>
-                    <div class="ext-lg font-medium mt-1 t"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid temporibus ipsa totam! Molestias fugiat ad soluta, laudantium cumque illum dolorem, perspiciatis optio excepturi, maxime a sit beatae enim cum nisi.</div>
+                    <div class="text-xs font-semibold uppercase text-yellow-500"><%= medya.title %></div>
+                    <div class="ext-lg font-medium mt-1 t"> <%- medya.aciklama %> </div>
                 </div>
             </div>
         </div>
