--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -41,28 +41,92 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- <div style="display: flex; padding:10px">
-                        <div style="flex: 8;">
-                            <div class="profile_avatar">
-                                <div class="profile_avatar_holder">
-                                    <img src="<%= medya.user.photo %>"
-                                        style="border-radius: 75px; height: 50px; width: 50px;">
+                    <div class="p-4 space-y-3">
+                        <div class=" py-4 space-y-4 dark:border-" style="width: 100%;">
+                            <div style="display: flex; flex-direction: row;">
+                                <div style="flex:8">
+                                    <a href="/profil"><img src="https://via.placeholder.com/200"
+                                            style="border-radius: 75px; height: 50px; width: 50px; margin-left: -10px;"></a>
                                 </div>
+                                <div style="flex:4">
+                                    <h3 class="text-lg font-semibold" style="text-align: right; margin-right: -10px;"> <ion-icon
+                                            style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
+                                        </ion-icon> | <span style="color: crimson;">ABONE OL</span>
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div>
+                                    <br>
+                                    <p class="leading-6" style="font-size: 15pt; margin-top: -8px;">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis ullam
+                                        adipisci numquam? Corrupti ut veritatis voluptatibus unde, molestias accusantium
+                                        repellat animi iste laudantium eos odit laborum harum neque saepe.
+                                    </p>
+                                    <div class="row" style="margin-left: 2vw; margin-top: 7px;">
+                                        <table>
+                                            <tr>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon name="logo-whatsapp" style="padding-left: 9vw;"
+                                                            class="text-2xl"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon name="logo-twitter" style="padding-left: 9vw;"
+                                                            class="text-2xl"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                            name="heart-outline"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                            name="chatbubble-ellipses-outline"></ion-icon>
 
-                                <div class="user_status status_online"></div>
-                                <div class="icon_change_photo" hidden>
-                                    <ion-icon name="camera" class="text-xl"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <b>
+                                                            <ion-icon class="text-2xl"
+                                                                style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;"
+                                                                name="checkmark-outline"></ion-icon>
+
+                                                        </b>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="flex items-center">
+                                                        <ion-icon class="text-2xl" style="padding-left: 9vw;"
+                                                            name="ellipsis-vertical"></ion-icon>
+                                                        <span class="text-sm"></span>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <hr style="margin-top: 4px;">
                                 </div>
                             </div>
                         </div>
-                        <div style="flex: 4;">
-                            <h3 class="text-lg font-semibold" style=" text-align: right;">
-                                <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
-                                </ion-icon> | <span style="color: crimson;">ABONE OL</span>
-                            </h3>
-                            </h3>
-                        </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
