--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -60,8 +60,7 @@
                                     <br>
                                     <p class="leading-6" style="font-size: 15pt; margin-top: -8px;">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis ullam
-                                        adipisci numquam? Corrupti ut veritatis voluptatibus unde, molestias accusantium
-                                        repellat animi iste laudantium eos odit laborum harum neque saepe.
+                                        adipisci numquam? Corrupti ut veritatis voluptatibus unde, molestias <small style="color:steelblue"><a href="#">Devamını gör...</a></small>
                                     </p>
                                     <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                         <table>
