--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -58,7 +58,7 @@
                             <div class="flex">
                                 <div>
                                     <br>
-                                    <p class="leading-6" style="font-size: 15pt; margin-top: -8px;">
+                                    <p class="leading-6" style="font-size: 15pt; margin-top: -8px; margin-left: -10px;">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis ullam
                                         adipisci numquam? Corrupti ut veritatis voluptatibus unde, molestias <small style="color:steelblue"><a href="#">Devamını gör...</a></small>
                                     </p>
