--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -74,6 +74,7 @@
                             <li @click="baglac()"><a>Raf</a></li>
                             <li @click="yorac()"><a>Yorumlar </a></li>
                             <li @click="begac()"><a>Beğeniler </a></li>
+                            <li @click="medac()"><a>Medya</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -272,6 +273,9 @@
                             </div>
                         </div>
                         <% }) %>
+                </div>
+                <div class="lg:w-12/12 space-y-6" v-if="medya == true" style="margin-left: 11px;">
+                    Medya gelecek
                 </div>
                 <!-- <div class="lg:w-5/12 space-y-6">
                   
